# Latent

./: .gitattributes  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
configs/: eval.yaml  infer.yaml  sft_mamba.yaml  sft_tiny_download_smoke.yaml  sft_tiny_smoke.yaml  slot_scorer_mamba.yaml  slot_scorer_tiny_smoke.yaml
data/: evidence_corpus_full_shuffled.jsonl
scripts/: build_tiny_model.py  eval_sft.py  infer_sft.py  infer_slot_scorer.py  prepare_data.py  run_all_v1.ps1  run_tiny_download_smoke.ps1  train_sft.py  train_slot_scorer.py
src/msp/: __init__.py
src/msp/data/: __init__.py  chunking.py  dataset.py  formatting.py  schema.py  slot_scorer.py
src/msp/eval/: __init__.py  baselines.py  metrics.py  report.py
src/msp/inference/: __init__.py  constrained_decoding.py  parser.py  slot_scorer.py  stopping.py
src/msp/latent/: __init__.py
src/msp/modeling/: __init__.py  slot_scorer.py
src/msp/train/: __init__.py  collator.py
tests/: test_constrained_decoding.py  test_formatting.py  test_metrics.py  test_parser.py  test_slot_scorer.py  test_stopping.py
