[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-slot-pivot"
version = "0.1.0"
description = "Explicit slot generation pipeline for chunk-level evidence selection."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
